Standalone components, switch parser

--- a/apps/party/src/app/app.component.html
+++ b/apps/party/src/app/app.component.html
@@ -234,7 +234,10 @@
         Settings page.
         <strong>Important:</strong> All players must have DIM set to the same
         language for this to work.
-        <img src="./assets/dim-export.png" />
+        <img
+          alt="screenshot showing the location of the weapons export button in DIM"
+          src="./assets/dim-export.png"
+        />
       </li>
       <li>Collect the destinyWeapons.csv files your players just exported.</li>
       <li>Import a CSV file for each player at the top of this page.</li>
@@ -272,15 +275,24 @@
         At this point, you <em>can</em> let your players choose from the search
         results, but my preference is to request they use the "Randomize from
         Search" button.
-        <img src="./assets/randomize-from-search.png" />
+        <img
+          alt="screenshot showing the location of the randomize from search button in DIM"
+          src="./assets/randomize-from-search.png"
+        />
       </li>
       <li>
         Pro tip: Use the Armor Mod Wizard on
-        <a href="https://www.d2checklist.com/gear/weapons" target="_blank"
+        <a
+          rel="noopener"
+          href="https://www.d2checklist.com/gear/weapons"
+          target="_blank"
           >D2 Checklist</a
         >
         to quickly equip relevant mods. Armor Mod Wizard video tutorial
-        <a href="https://www.youtube.com/watch?v=8LblnLMz8_4" target="_blank"
+        <a
+          rel="noopener"
+          href="https://www.youtube.com/watch?v=8LblnLMz8_4"
+          target="_blank"
           >here.</a
         >
       </li>
