--- a/apps/party/src/app/app.component.html
+++ b/apps/party/src/app/app.component.html
@@ -88,6 +88,10 @@
           <mat-label>Discord Webhook URL</mat-label>
           <input matInput [(ngModel)]="discordWebhookUrl" type="password" />
         </mat-form-field>
+        <mat-form-field color="accent">
+          <mat-label>Thread ID (optional)</mat-label>
+          <input matInput [(ngModel)]="discordThreadId" type="password" />
+        </mat-form-field>
       </mat-card>
     </div>
   </div>
