--- a/apps/party/src/app/app.component.html
+++ b/apps/party/src/app/app.component.html
@@ -149,14 +149,24 @@
     </div>
   </div>
 
-  <!-- <mat-expansion-panel hideToggle *ngIf="manifestState === 'ready'">
+  <mat-expansion-panel hideToggle *ngIf="manifestState === 'ready'">
     <mat-expansion-panel-header>
       <mat-panel-title> Help </mat-panel-title>
-      <mat-panel-description>
+      <!-- <mat-panel-description>
         A very in-depth and helpful tutorial
-      </mat-panel-description>
+      </mat-panel-description> -->
     </mat-expansion-panel-header>
-    <ol>
+
+    Make sure all players have the following two options enabled in their
+    <a href="https://www.bungie.net/7/en/User/Account/Privacy" target="_blank"
+      >Bungie.net Privacy Settings</a
+    >:
+    <ul>
+      <li>Show my non-equipped Inventory</li>
+      <li>Show my progression</li>
+    </ul>
+
+    <!-- <ol>
       <li>
         Instruct all players to export their Weapons spreadsheet from DIM's
         Settings page.
@@ -224,6 +234,6 @@
           >here.</a
         >
       </li>
-    </ol>
-  </mat-expansion-panel> -->
+    </ol> -->
+  </mat-expansion-panel>
 </div>
